# ForgeOAgent

./: .env.production  .gitignore  MANIFEST.in  README.md  api.py  build_exe.py  main.py  original_gemini.py  pyproject.toml  readme_doc.md  requirements.txt  setup.py  start.py  vercel.json
agents/enhanced_code_processor/: main_agent.jsonl  metadata.json
agents/folder_structure/: main_agent.jsonl  metadata.json
agents/heee/: main_agent.jsonl  metadata.json
clients/: __init__.py  gemini_client.py  gemini_engine.py
clients/gemini/: __init__.py  gemini_content_manager.py  gemini_contents_handler.py  gemini_executor.py  gemini_inquirer.py  gemini_log_handler.py  gemini_logger.py  gemini_main_generate.py  gemini_search.py
controller/: executor_controller.py  generate_content.py  inquirer_controller.py  search_content.py
core/: agent_manager.py  class_analyzer.py  config_prompts.py  pip_installer.py  security_manager.py  test_agent_manager.py  test_api_key_manager.py
core/managers/: agent_manager.py  instrument_manager.py
core/prompts/: enhance_prompt.py  generate_email.py  refine_code.py  regex.py
forgeoagent/: __init__.py  __main__.py  cli.py  main.py  start.py
forgeoagent/approval/: __init__.py  evaluator.py  policy.py  requests.py  ui_bridge.py
forgeoagent/cli/: main.py
forgeoagent/clients/: client_interface.py  gemini_engine.py
forgeoagent/config/: __init__.py  config.py  config_prompts.py  defaults.py  settings.py  (+1 more)
scripts/: build_windows.ps1
static/: script.js  style.css
templates/: index.html
tests/: images-htmp-generator.py  test.py
(+72 files in other folders)
