[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeoagent"
version = "0.1.0"
authors = [
    {name = "Angel Koradiya", email = "koradiyaangel11@gmail.com"},
]
description = "ForgeOAgent - An AI agent framework"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests==2.33.0",
    "python-dotenv==1.2.2",
    "google-genai==1.68.0",
    "google-api-core==2.30.0",
    "google-generativeai==0.8.6",
    "fastapi==0.135.2",
    "python-multipart==0.0.22",
    "uvicorn==0.42.0",
    "jinja2==3.1.6",
    "bs4==0.0.2",
]

[project.optional-dependencies]
gui = [
    "wxPython>=4.2.3",
]

[project.urls]
Homepage = "https://forgeoagent.vercel.app"
Documentation = "https://github.com/angelkoradiya/forgeoagent#readme"
Repository = "https://github.com/angelkoradiya/forgeoagent"
Issues = "https://github.com/angelkoradiya/forgeoagent/issues"

[project.scripts]
forgeoagent = "forgeoagent.cli:main"
app = "forgeoagent.web.api:app"

[tool.setuptools]
packages = ["forgeoagent"]

[tool.setuptools.package-data]
forgeoagent = ["web/templates/*", "web/static/*"]